force-app/main/default/objects/ampi__Project_IATI_Sector__c/ampi__Project_IATI_Sector__c.object-meta.xml
<CustomObject>
    <description>This junction object tracks the relationship between a Project and a specific IATI Sector in Amp.</description>
    <label>Project IATI Sector</label>
    <nameField>
        <displayFormat>PIS-{00000}</displayFormat>
        <label>Project IATI Sector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project IATI Sectors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>