force-app/main/default/objects/ampi__Project_IATI_Sector__c/fields/ampi__IATI_Sector__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Sector__c</fullName>
    <description>This is the secondary master-detail relationship on Project IATI Sector.</description>
    <label>IATI Sector</label>
    <referenceTo>ampi__IATI_Sector__c</referenceTo>
    <relationshipLabel>Project IATI Sectors</relationshipLabel>
    <relationshipName>Project_IATI_Sectors</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>