force-app/main/default/objects/ampi__Project_IATI_Sector__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <description>This is the primary master-detail relationship for Project IATI Sector.</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Project IATI Sectors</relationshipLabel>
    <relationshipName>Project_IATI_Sectors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>