force-app/main/default/objects/ampi__Project_IATI_Sector__c/fields/ampi__Sector_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ampi__Sector_Percentage__c</fullName>
    <description>Track the focus of a project on a specific sector as a percent.</description>
    <inlineHelpText>Track the focus of a project on a specific sector as a percent.</inlineHelpText>
    <label>Sector Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>